Committed changes for  Storybook > Component > Small and Large Mabile view save and cancel button is alignment issue all component.

--- a/raaghu-react-themes/src/styles/responsive.scss
+++ b/raaghu-react-themes/src/styles/responsive.scss
@@ -6,6 +6,13 @@
     min-width: 40px;
   }
 
+  .footer-buttons{
+    .btn{
+      width:100%;
+      max-width: 100%;
+    }
+  }
+  
   .dropdown-menu {
     max-height: 390px;
   }
